--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,3 +1,17 @@
+html,
+body {
+	margin: 0;
+	height: 100%;
+	width: 100%;
+	box-sizing: border-box;
+	font-family: Roboto, sans-serif;
+	font-size: 14px;
+	font-weight: normal;
+	font-stretch: normal;
+	font-style: normal;
+	line-height: normal;
+}
+
 table {
 	border-collapse: collapse;
 }
