--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -27,3 +27,10 @@ td {
 	padding: 0.5rem;
 	border: 1px solid black;
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+	-webkit-box-shadow: 0 0 0 30px white inset !important;
+}
