"css_update : [dialogboxz :index수정 , dashbord : margin-top 추가]"

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -35,3 +35,7 @@ input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
 	-webkit-box-shadow: 0 0 0 30px white inset !important;
 }
+
+.ReactModal__Overlay{
+  z-index: 99999;
+}
