--- a/src/styles/default.css
+++ b/src/styles/default.css
@@ -1,8 +1,6 @@
 html,
 body {
 	margin: 0;
-	height: 100%;
-	width: 100%;
 	box-sizing: border-box;
 	font-family: Roboto, sans-serif;
 	font-size: 14px;
@@ -13,9 +11,15 @@ body {
 	letter-spacing: 0.1px;
 }
 
+div,
+section {
+	box-sizing: border-box;
+}
+
 #root {
-	width: 100%;
-	height: 100%;
+	width: 100vw;
+	height: 100vh;
+	display: flex;
 }
 
 table {
