--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -4,7 +4,6 @@
 
 .DateInput_input {
 	width: 100%;
-
 	font-size: 14px;
 	height: 32px;
 	border-radius: 4px;
@@ -25,68 +24,149 @@
 	border: solid 1px #4ca6a8;
 }
 
-.DayPickerNavigation_button{border: none
+.DayPickerNavigation_button {
+	border: none;
 }
 
-.CalendarMonth_table{
-	table{ font-family: NotoSansCJKKR;
-		font-size: 14px;	padding: 0px 17px !important;
+.DayPicker__withBorder,
+.DayPicker_transitionContainer {
+	width: 514px !important;
+	height: 328px !important;
+	max-width: 514px !important;
+	max-height: 328px !important;
+	padding: 0px !important;
+	margin: 0px !important;
+}
 
+.DayPicker_transitionContainer {
+	width: 514px !important;
+	height: 268px !important;
+	max-width: 514px !important;
+	max-height: 268px !important;
+	padding: 0px !important;
+	margin: 0px !important;
+}
+
+.CalendarMonthGrid {
+	width: 514px;
+}
+
+.CalendarMonthGrid {
+	left: 0;
+	max-width: 514px;
+	max-height: 328px;
+}
+
+.CalendarMonth {
+	table {
+		display: inline-block;
+		width: 100%;
+		font-family: NotoSansCJKKR;
+		font-size: 14px;
+		padding: 0px 16px;
 	}
-	td{
+	td {
 		border: 1px solid transparent;
 	}
 }
 
+.DayPicker_focusRegion {
+	height: 268px;
+	max-height: 268px;
+}
 
-.CalendarMonth_caption{
+.CalendarMonth_caption {
 	font-size: 14px;
-	font-weight: 500;  letter-spacing: 0.14px;font-family: NotoSansCJKKR;
-padding:  10.5px 0;
+	font-weight: 500;
+	letter-spacing: 0.14px;
+	font-family: NotoSansCJKKR;
+	padding: 10.5px 0;
 	margin-bottom: 32px;
 	border-bottom: solid 1px #e3e5e5;
 	width: 100%;
 }
 
-.CalendarMonth{padding: 0px !important; }
+.CalendarMonth {
+	padding: 0px !important;
+}
 
+.CalendarMonthGrid_month__horizontal {
+	height: 268px;
+}
 
-//.CalendarDay__default {
+.CalendarDay__default:hover {
+	border: none;
+	background: transparent;
+	box-shadow: inset 0 0 0 1px #178082;
+}
 
-//	border-radius: 50%;
-//
-//}
-//
-//.CalendarDay__default:hover {
-//	background: transparent;
-//	border: solid 1px #178082;
-//	border-radius: 50%;
-//}
+.CalendarDay__selected_span {
+	background-color: #e4f3f4;
+	border: none;
+	color: black;
+}
+
+.CalendarDay__selected_span:active,
+.CalendarDay__selected_span:hover {
+	background-color: #e4f3f4;
+	color: black;
+}
+
+.CalendarDay__selected,
+.CalendarDay__selected:active,
+.CalendarDay__selected:hover {
+	background-color: #178082;
+	border: none;
+	color: #fff;
+}
+
+.CalendarDay__blocked_calendar,
+.CalendarDay__blocked_calendar:active,
+.CalendarDay__blocked_calendar:hover {
+	background-color: #e4f3f4;
+	color: #212121;
+	border: none;
+}
+
+.CalendarDay__hovered_span,
+.CalendarDay__hovered_span:hover {
+	background-color: #e4f3f4;
+	color: #212121;
+	border: none;
+}
 
 .DayPickerKeyboardShortcuts_buttonReset {
 	display: none;
 }
 
-
-.CalendarMonth{
-display:flex;
-flex-direction: column;}
-
-
-.DayPicker_weekHeader{
-	top: 50px;
-padding: 0px !important;
+.DateInput_fang {
+	display: none;
 }
 
-.DayPickerNavigation_button__horizontalDefault{
-top: 0px;padding: 9px 16px 8px 16px;
-}
-.DayPickerNavigation_leftButton__horizontalDefault{
-left: 0px;
-
-}
-.DayPickerNavigation_rightButton__horizontalDefault{
-
-
+.CalendarMonth {
+	display: flex;
+	flex-direction: column;
 }
 
+.DayPicker_weekHeader {
+	top: 48px;
+	padding: 0px 11px !important;
+	color: #212121;
+}
+
+.DayPickerNavigation_button,
+.DayPickerNavigation_button:hover,
+.DayPickerNavigation_button:active {
+	width: 24px;
+	display: block;
+	top: 4px;
+	border: none;
+	background: transparent;
+}
+.DayPickerNavigation_leftButton__horizontalDefault {
+	left: 14px;
+}
+
+.DayPickerNavigation_rightButton__horizontalDefault {
+	left: 460px;
+}
