--- a/src/styles/default.scss
+++ b/src/styles/default.scss
@@ -26,11 +26,11 @@ table {
 	border-collapse: collapse;
 }
 
-th,
-td {
-	padding: 0.5rem;
-	border: 1px solid black;
-}
+//th,
+//td {
+//	padding: 0.5rem;
+//	border: 1px solid black;
+//}
 
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
